<resources>
    <string name="app_name">Care Place</string>
    <string name="next">NEXT</string>
    <string name="topic1">Our platform provides communication between
the patient and the doctor, You will be able to choose the Suitable Doctor for Your Medical Case.</string>
    <string name="topic2">You will be able to choose the appropriate Doctor
        based on Standrads and Feedbacks
that will indicate the quality of medical care
            </string>
    <string name="topic3">You can make appoiment for the examintion for Doctor </string>
    <string name="topic4">The patient will record a list of the drugs that
are treated for the disease, including all the medical data (time, number of times a day,
number of doses of the prescribed treatment).</string>
    <string name="topic5">We provide you a full recover for the Medical treatment operation which me it Easier.</string>
    <string name="back">BACK</string>
    <string name="you_are_here">Are you here as</string>
    <string name="doc">Doctor</string>
    <string name="pat">Patient</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_phone_number">Enter your Email or Phone number</string>
    <string name="enter_pass">Enter The Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="anothr_way">or sign up with</string>
    <string name="have_acc">Already have account ?</string>
    <string name="new_acc">New Account</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="d_of_b">Date of The Birth</string>
    <string name="date">YYYY -- MM -- DD</string>
    <string name="id">National ID</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Enter The Phone Number</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Your Age</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Enter Your Gender</string>
    <string name="weight">Weight By Kg</string>
    <string name="height">Height By Cm</string>
    <string name="submit">Submit</string>
    <string name="name">Full Name</string>
    <string name="enter_id">Enter Your National ID</string>
    <string name="specialization">Specialization</string>
    <string name="enter_spec">Select Your Specialization</string>
    <string name="skip">Skip</string>
    <string name="enter_name">Enter Your Full Name</string>
    <string name="pass">Password</string>
    <string name="trouble_in_logging_in">Trouble in logging in ?</string>
    <string name="email_or_phone">Enter your email, phone, or username and we\'ll send you a link to get back into your account</string>
    <string name="enter_your_email_or_phone_number">Enter your Email or Phone number</string>
    <string name="or">------------------------------Or------------------------------</string>
    <string name="create_new_account">Create New account</string>
    <string name="back_to_login">Back to login</string>
    <string name="hello">Hello </string>
    <string name="welcome_text">Welcome to Care Place How is your health today ?</string>
    <string name="mma">Medical Manager App</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="current_pass">Current Password</string>
    <string name="spec1">Cardiologist</string>
    <string name="spec2">Pulmonologist</string>
    <string name="spec3">orthopaedic</string>
    <string name="top_doc">Top Doctors</string>
    <string name="spec4">Ophthalmologist</string>
    <string name="spec5">Dentist</string>
    <string name="spec6">Audiologist</string>
    <string name="spec7">ENT Specialists</string>
    <string name="spec8">Gynecologist</string>
    <string name="spec9">Radiologist</string>
    <string name="spec10">Pediatrician</string>
    <string name="type_mess">type the message ...</string>
    <string name="view_profile">Profile</string>
    <string name="received_messa">This is Received message</string>
    <string name="schedule">schedule</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="up_coming_schedules">Up Coming Schedules</string>
    <string name="medication">Medication</string>
    <string name="hello_dr">Hello, DR/</string>
    <string name="welcome_to_care_place">Welcome to Care Place</string>
    <string name="profile_information">Profile Information</string>
    <string name="my_patient">My Patients</string>
    <string name="setting">Setting</string>
    <string name="calender">Calender</string>
    <string name="details">Details</string>
    <string name="medical_history">Medical History</string>
    <string name="add">Add</string>
    <string name="add_your_review">Add Your Review</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="surgeries">Surgeries</string>
    <string name="alzheimer_s_disease_and_dementia">Alzheimer\'s disease and dementia</string>
    <string name="depression">Depression</string>
    <string name="heart_failure">Heart Failure</string>
    <string name="chronic_kidney_disease">Chronic kidney disease</string>
    <string name="diabetes">Diabetes</string>
    <string name="ischemic_heart_disease">Ischemic heart disease</string>
    <string name="arthritis">Arthritis</string>
    <string name="obesity">Obesity</string>
    <string name="high_cholesterol">High cholesterol</string>
    <string name="hypertension">Hypertension</string>
    <string name="x_rays_and_medical_tests">X_Rays and Medical Tests</string>
    <string name="allergies">Allergies</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="what_is_your_allergies">what is your allergies</string>
    <string name="remove">Remove</string>
    <string name="delect_account">Delect Account</string>
    <string name="log_out">Log Out</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="last_appointment">Last Appointment</string>
    <string name="more_information">More Information</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="personal_information">Personal Information</string>
    <string name="introduce_yourself_to_the_patient">Please write more information about yourself to introduce yourself to the patient</string>
    <string name="about_me">About Me : </string>

</resources>