<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="176dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/topic2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Next_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="170dp"
            android:backgroundTint="@color/white"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/back_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="170dp"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </FrameLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="387dp"
        android:layout_height="581dp"
        app:layout_constraintBottom_toTopOf="@id/frame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/frag6">

    </com.airbnb.lottie.LottieAnimationView>


</androidx.constraintlayout.widget.ConstraintLayout>